--- a/vagrant/itemCatalog/templates/restaurants_list.html
+++ b/vagrant/itemCatalog/templates/restaurants_list.html
@@ -13,8 +13,8 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
 <body>
@@ -30,24 +30,24 @@
     </button>
     <div id="restaurant-content">
         {% if not restaurants %}
-            <ul class="list-group">
-                <li class="list-group-item list-group-item-info">
-                    No restaurant present.
-                </li>
-            </ul>
+        <ul class="list-group">
+            <li class="list-group-item list-group-item-info">
+                No restaurant present.
+            </li>
+        </ul>
         {% else %}
-            {% for r in restaurants %}
-                <div class="row">
-                    <div class="col-md-6">
-                        <a href="{{ url_for('menu', restaurant_id=r.id) }}">{{ r.name }}</a>
-                        <button href="{{ url_for('edit_restaurant', restaurant_id=r.id) }}"
-                                data-restaurant-id="{{ r.id }}"
-                                class="edit-restaurant fa fa-pencil-square-o"></button>
-                        <button data-restaurant-id="{{ r.id }}"
-                                class="delete-restaurant glyphicon glyphicon-trash"></button>
-                    </div>
-                </div>
-            {% endfor %}
+        {% for r in restaurants %}
+        <div class="row">
+            <div class="col-md-6">
+                <a href="{{ url_for('menu', restaurant_id=r.id) }}">{{ r.name }}</a>
+                <button href="{{ url_for('edit_restaurant', restaurant_id=r.id) }}"
+                        data-restaurant-id="{{ r.id }}"
+                        class="edit-restaurant fa fa-pencil-square-o"></button>
+                <button data-restaurant-id="{{ r.id }}"
+                        class="delete-restaurant glyphicon glyphicon-trash"></button>
+            </div>
+        </div>
+        {% endfor %}
         {% endif %}
     </div>
     <div class="row">
@@ -143,7 +143,7 @@
             "hideMethod": "fadeOut"
         };
 
-
+        /*
         $('.edit-restaurant').click(function () {
             var restaurant_id = $(this).attr('data-restaurant-id');
             bootbox.dialog({
@@ -158,6 +158,25 @@
                 $('#edit-restaurant-form').hide().appendTo('body');
             }).modal('show');
 
+         });
+         */
+
+        $('.edit-restaurant').click(function () {
+            var restaurant_id = $(this).attr('data-restaurant-id');
+            $.confirm({
+                title: 'Edit Restaurant',
+                content: '<div id="content-edit"></div>',
+                theme: 'material',
+                contentLoaded: function (data, status, xhr) {
+                    toastr.info('hit');
+                },
+                confirm: function () {
+
+                },
+                cancel: function () {
+                    toastr.info('Delete Cancelled');
+                }
+            });
         });
 
         $('.delete-restaurant').click(function () {
